Some pom change for jdk11 support
  * add javax.annotation.api
  * add -Djdk.attach.allowAttachSelf=true for test due to byteman need