@@ -67,7 +67,7 @@
     <xnioVersion>3.3.0.Final</xnioVersion>
     <keycloakVersion>7.0.1</keycloakVersion>
     <bouncycastleVersion>1.53</bouncycastleVersion>
-    <bytemanVersion>3.0.6</bytemanVersion>
+    <bytemanVersion>4.0.9</bytemanVersion>
     <kafkaVersion>1.1.0</kafkaVersion>
     <logbackVersion>1.2.3</logbackVersion>
     <logbackContribVersion>0.1.5</logbackContribVersion>
@@ -1522,6 +1522,11 @@
         <artifactId>propulsor-content-audit-api</artifactId>
         <version>${propulsorVersion}</version>
       </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   
@@ -1705,6 +1710,8 @@
             <redirectTestOutputToFile>${test-redirectOutput}</redirectTestOutputToFile>
             <forkCount>${test-forkCount}</forkCount>
             <reportsDirectory>${junit.report.dir}</reportsDirectory>
+            <!-- for byteman -->
+            <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -1724,6 +1731,8 @@
             <includes>
               <include>**/*Test.java</include>
             </includes>
+            <!-- for byteman -->
+            <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
           </configuration>
         </plugin>
         <plugin>
